# pytest-iovis

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  README.rst  pyproject.toml  pytest_papermill.py  setup.py  tox.ini
.github/workflows/: release.yml  run_tests.yaml
docs/: getting-started.md
src/pytest_iovis/: __init__.py  _file.py  _fixtures.py  _types.py  _utils.py  _venv_builder.py  plugin.py
src/pytest_iovis/_subplugins/: __init__.py  discovery.py  grouping.py  markup.py  notebook_marker.py  papermill_runner.py
src/pytest_papermill/: __init__.py  _file.py  _fixtures.py  _utils.py  _venv_builder.py  plugin.py
src/pytest_papermill/_subplugins/: __init__.py  discovery.py  grouping.py  markup.py  notebook_marker.py  papermill_runner.py
tests/: conftest.py  test_fixtures.py  test_notebook_discovery.py  test_notebook_grouping.py  test_notebook_marker.py  test_papermill_runner.py  test_plugin.py
