[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-papermill"
version = "0.1.0"
authors = []
readme = "README.rst"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Testing",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]
description = "A Pytest plugin to enable Jupyter Notebook testing with Papermill"
requires-python = ">=3.7"
dependencies = ["pytest>=7.0.0", "papermill ~= 2.0"]

[project.optional-dependencies]
dev = ["pre-commit"]

[project.entry-points.pytest11]
papermill = "pytest_papermill"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
extend-select = [
  "B",
  "C4",
  "T20",
  "PT",
  "RET",
  "SIM",
  "ARG",
  "PTH",
  "RUF",
  "PLE",
]
line-length = 120
